<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/peopleFragment"
        android:name="com.fernando.proyectofinal.ui.people.PeopleFragment"
        android:label="@string/title_people"
        tools:layout="@layout/fragment_people" />

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.fernando.proyectofinal.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/weatherFragment"
        android:name="com.fernando.proyectofinal.ui.weather.WeatherFragment"
        android:label="@string/title_weather"
        tools:layout="@layout/fragment_weather" />

    <fragment
        android:id="@+id/logsFragment"
        android:name="com.fernando.proyectofinal.ui.logs.LogsFragment"
        android:label="@string/title_activity"
        tools:layout="@layout/fragment_logs" />
</navigation>